--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                     <a href="https://github.com/RyanWilliams150" target="_blank" class="social__link click">
                         <i class=" fab fa-github"></i>
                     </a>
-                    <a href="/assets/RyanWilliamsResume.pdf" target="_blank" class="social__link click">
+                    <a href="./assets/RyanWilliamsResume.pdf" target="_blank" class="social__link click">
                         <i class=" fas fa-file-pdf"></i>
                     </a>
                 </div>
@@ -266,7 +266,7 @@
                     ">
                         Contact
                     </a>
-                    <a href="/assets/RyanWilliamsResume.pdf" target="_blank" class="
+                    <a href="./assets/RyanWilliamsResume.pdf" target="_blank" class="
                         footer__social--link
                         link__hover-effect
                         link__hover-effect--white
