--- a/index.html
+++ b/index.html
@@ -243,6 +243,33 @@
                             </div>
                         </div>
                     </li>
+                    <li class="project">
+                        <div class="project__wrapper">
+                            <img src="./assets/AJJShowcase.png" class="project__img" alt="">
+                            <div class="project__wrapper--bg"></div>
+                            <div class="project__description">
+                                <h3 class="project__description--title">
+                                    Website
+                                </h3>
+                                <h4 class="project__description--sub-title">
+                                    HTML, CSS, JavaScript
+                                </h4>
+                                <p class="project__description--para">
+                                    A website for a client featuring a user-friendly interface and a mobile-responsive 
+                                    design, integrating an API with JavaScript to handle message 
+                                    inquiries and service requests efficiently.
+
+                                </p>
+                                <div class="project__description--links">
+                                    <a href="https://github.com/RyanWilliams150/AJJWebsite" target="_blank" class="project__description--link">
+                                        <i class="fab fa-github"></i>
+                                    <a href="https://www.ajjdeliverto.us" target="_blank" class="project__description--link">
+                                        <i class="fa-solid fa-link"></i>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -283,7 +310,7 @@
 
                 </div>
 
-                <div class="footer__copyright">Made by Ryan Williams</div>
+                <div class="footer__copyright">Made by Ryan</div>
             </div>
         </div>
     </footer>
